@@ -193,7 +193,8 @@ org.castor.cache.Factories=\
   org.castor.cache.distributed.OsCacheFactory,\
   org.castor.cache.hashbelt.FIFOHashbeltFactory,\
   org.castor.cache.hashbelt.LRUHashbeltFactory,\
-  org.castor.cache.distributed.EHCacheFactory
+  org.castor.cache.distributed.EHCacheFactory,\
+  org.castor.cache.distributed.GigaspacesCacheFactory
 
 # 
 # TransactionManagerFactory implementations
